# deepwiki-open

./: .gitattributes  .gitignore  Earthfile  docker-compose.yml
.github/actions/earthly-build/: action.yml
.github/workflows/: ci.yml
api/: azureai_client.py  config.py  data_pipeline.py  generate_endpoint.py  google_embedder_client.py  job_manager.py  models.py  openai_client.py  openrouter_client.py  pyproject.toml  vertex_client.py  vertex_embedder_client.py  websocket_wiki.py  wiki_generator.py
api/config/: embedder.json  generator.json
src/app/[owner]/[repo]/: page.tsx
src/app/api/chat/stream/: route.ts
src/utils/: getRepoUrl.tsx
